# fastapiTestVercel

./: .dockerignore  .gitignore  config.py  dockerfile  exceptions.py  main.py  pyproject.toml  s3_client.py  test_client.py  test_s3.py
api/: index.py
app/: config.py  main.py
app/api/v1/: apiKeyHandler.py  filename.py  router.py  s3Api.py
app/middleware/: logging.py  rate_limiter.py  security.py
app/model/: User.py  test_usermodel.py
app/repositories/: s3_repository.py
app/services/: __init__.py  autorisation.py
middleware/: __init__.py  logging.py  rate_limiter.py  security.py
model/: User.py  test_usermodel.py
services/: autorisation.py  s3_client.py
